--- a/web/src/index_template.html
+++ b/web/src/index_template.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>UCP Light</title>
+    <title>React & SAM</title>
 </head>
 <body>
     <div id="app"></div>
